--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -457,7 +457,8 @@ High-level calculations
 
 CosmicCalculator
 
-* Distance on a 2D curved space::
+* Distance on a 2D curved space::  Distances in 2D for simplicity
+* Extending distance concepts to 3D::  Going to 3D (our real universe).
 * Invoking astcosmiccal::       How to run CosmicCalculator
 
 Developing
@@ -12167,129 +12168,128 @@ detected object which is the purpose of the tools in this section.
 @section CosmicCalculator
 
 To derive higher-level information regarding our sources in
-extra-galactic astronomy cosmological calculations are necessary. In
+extra-galactic astronomy, cosmological calculations are necessary. In
 Gnuastro, CosmicCalculator is in charge of such calculations. Before
 discussing how CosmicCalculator is called and operates (in
 @ref{Invoking astcosmiccal}), it is important to provide a rough but
-mostly self sufficient (for the purpose of a homogenous and isotropic
-universe) review of the basics and the equations used in the
-analysis. In @ref{Distance on a 2D curved space} we provide a basic
-review of how distances can be defined and used on a curved space. The
-derivations and mathematics presented here are only desired to be
-enough for an observational astronomer, dealing with a homogenous and
-isotropic (on large scales) universe, a rigorous, and mathematically
-complete discussion/proof of all these concepts is far beyond the
-desired scope here. In short, although the mathematical derivations
-are correct (for the assumed situation), the emphasis here is to
-provide a qualitative and physical understanding of those equations.
+mostly self sufficient review of the basics and the equations used in
+the analysis. In @ref{Distance on a 2D curved space} the basic idea of
+understanding distances in a curved and expanding 2D universe (which
+we can visualize) are reviewed. Having solidified the concepts there,
+in @ref{Extending distance concepts to 3D}, the formalism is extended
+to the 3D universe we are trying to study in our research.
+
+The focus here is obtaining a physical insight into these equations
+(mainly for the use in real observational studies). There are many
+books thoroughly deriving and proving all the equations with all
+possible initial conditions and assumptions for any abstract universe,
+interested readers can study those books.
 
 @menu
-* Distance on a 2D curved space:: Distances in 2D for simplicity
+* Distance on a 2D curved space::  Distances in 2D for simplicity
+* Extending distance concepts to 3D::  Going to 3D (our real universe).
 * Invoking astcosmiccal::       How to run CosmicCalculator
 @end menu
 
-@node Distance on a 2D curved space, Invoking astcosmiccal, CosmicCalculator, CosmicCalculator
+@node Distance on a 2D curved space, Extending distance concepts to 3D, CosmicCalculator, CosmicCalculator
 @subsection Distance on a 2D curved space
 
 The observations to date (for example the Plank 2013 results), have
-not measured the presence of a significant curvature in the universe.
-However to be generic (and allow its measurement if it does infact
-exist), it is very important to create a framework that allows
-curvature. It is impossible to create a good mental picture of the
-curvature of a 3D volume in a 4D space, so for the major part of this
-analysis, we will assume a 2D surface and discuss distances on that 2D
-surface, when it is flat, or when the 2D surface is curved (in a 3D
-space). To further simplify the analysis we will assume that we have a
-2D friend living on that 2D space (which @emph{might} be curved in 3D)
-and we want to help it analyze the curvature of its 2D universe. The
+not measured the presence of a significant curvature in the
+universe. However to be generic (and allow its measurement if it does
+infact exist), it is very important to create a framework that allows
+curvature. As 3D beings, it is impossible for us to create a mental
+picture (visualize) of the curvature of a 3D volume in a 4D
+space. Hence, here we will assume a 2D surface and discuss distances
+on that 2D surface when it is flat, or when the 2D surface is curved
+(in a 3D space). Once the concepts have been created/visualized here,
+in @ref{Extending distance concepts to 3D}, we will extend them to the
+real 3D universe we live in and hope to study.
+
+To be more understandable (actively discuss from an observer's point
+of view) let's assume we have an imaginary 2D friend living on the 2D
+space (which @emph{might} be curved in 3D). So here we will be working
+with it in its efforts to analyze distances on its 2D universe. The
 start of the analysis might seem too mundane, but since it is
-impossible to imagine as 3D curved space, it is important to review
-all the concepts thoroughly for our imaginary friend first. The
-equations can then easily be extended to 3D.
+impossible to imagine a 3D curved space, it is important to review all
+the very basic concepts thoroughly for an easy transition to a
+universe we cannot visualize any more (a curved 3D space in 4D).
+
+To start, let's assume a static (not expanding or shrinking), flat 2D
+surface similar to @ref{flatplane} and that our 2D friend is observing
+its universe from point @mymath{A}. One of the most basic ways to
+parametrize this space is through the cartesian coordinates
+(@mymath{x}, @mymath{y}). In @ref{flatplane}, the basic axises of
+these two coordinates are plotted. An infinitesmial change in the
+direction of each axis is written as @mymath{dx} and @mymath{dy}. For
+each point, the infinitesimal changes are parallel with the respective
+axises and are not shown for clarity. Another very useful way of
+parametrizing this space is through polar coordinates. For each point,
+we define a radius (@mymath{r}) and angle (@mymath{\phi}) from a fixed
+(but arbitrary) reference axis. In @ref{flatplane} the infinitesimal
+changes for each polar coordinate are plotted for a random point and a
+dashed circle is shown for all points with the same radius.
 
 @float Figure,flatplane
-@center@image{gnuastro-figures/flatplane, 8cm, , }
+@center@image{gnuastro-figures/flatplane, 10cm, , }
 
 @caption{Two dimentional cartesian and polar coordinates on a flat
 plane.}
 @end float
 
-To start, let's assume a static (not expanding or shrinking), flat 2D
-surface (see @ref{flatplane}) and that our 2D friend is observing the
-universe from point @mymath{A}. One of the most basic ways to
-parametrize this space is through the cartesian coordinates
-(@mymath{x}, @mymath{y}). In @ref{flatplane}, the basic axises of
-these two coordinates are plotted. An infinitesmial change the the
-direction of each axis is written as @mymath{dx} and @mymath{dy}. For
-each point the infinitesimal changes are parallel with the respective
-axises and are not shown for clarity. Another very contenient way of
-parametrizing this space is through polar coordinates. For each point,
-we define a radius (@mymath{r}) and angle (@mymath{\phi}) from a fixed
-(but arbitrary) reference axis. In @ref{flatplane} the infinitesimal
-changes for each polar coordinate are plotted for a random point and a
-dashed circle is shown for all points with the same radius. The very
-important point here is to recall that @mymath{d\phi} is always
-perpendicular to @mymath{dr} and only touches the circle (of fixed
-@mymath{r}) tangentially, so unlike the curve (circle) it produces,
-@mymath{d\phi} is a straight line. In general, any infinitesimal
-change is a streight line by definition, even if it produces a curved
-line over a large interval (we define curvature by the change in those
-streight lines). This will become important later when assuming a
-curved space, so it was emphasized here.
-
-As a summary, assuming a certain position, which can be parametrized
-as @mymath{(x,y)}, or @mymath{(r,\phi)}, a new point at an
-infinitesimal distance away will have the coordinates
+Assuming a certain position, which can be parametrized as
+@mymath{(x,y)}, or @mymath{(r,\phi)}, a general infinitesimal change
+change in its position will place it in the coordinates
 @mymath{(x+dx,y+dy)} and @mymath{(r+dr,\phi+d\phi)}. The distance (on
 the flat 2D surface) that is covered by this infinitesimal change in
 the static universe (@mymath{ds_s}, the subscript signifies the static
 nature of this universe) can be written as
 @dispmath{ds_s=dx^2+dy^2=dr^2+r^2d\phi^2}The main question is this:
-how can a 2D creature on the point @mymath{A}, know if the flat and
-easy to understand universe of @ref{flatplane} corresponds to its real
-2D universe? The universe it lives in might equally be a locally flat
-but globally curved surface like @ref{sphericalplane}. The answer to
-this question but for a 3D being (us) is the whole purpose to this
-discussion and one of the main questions still alive in Cosmology. So
-here we want to give that creature (and later, ourselves) the tools to
-discover the curvature of the universe it lives in by measuring
-distances.
+how can our 2D friend incorporate the (possible) curvature in its
+universe when it is calculating distances? The universe it lives in
+might equally be a locally flat but globally curved surface like
+@ref{sphericalplane}. The answer to this question but for a 3D being
+(us) is the whole purpose to this discussion. So here we want to give
+our 2D friend (and later, ourselves) the tools to measure distances if
+the space (that hosts the objects) is curved.
+
+@ref{sphericalplane} assumes a spherical shell with radius @mymath{R}
+as the curved 2D plane for simplicity. The spherical shell is tangent
+to the 2D plane and only touches it at @mymath{A}. The result will be
+generalizd afterwards. The first step in measuring the distance in a
+curved space is to imagine a third dimension along the @mymath{z} axis
+as shown in @ref{sphericalplane}. For simplicity, the @mymath{z} axis
+is assumed to pass through the center of the spherical shell. Our
+imaginary 2D friend cannot visualize the third dimension or a curved
+2D surface within it, so the remainder of this discussion is purely
+abstract for it (similar to us being unable to visualize a 3D curved
+space in 4D). But since we are 3D creatures, we have the advantage of
+visualizing the following steps. Fortunately our 2D friend knows our
+mathematics, so it can follow along with us.
+
+With the third axis added, a generic infinitesimal change over
+@emph{the full} 3D space corresponds to the distance:
+@dispmath{ds_s^2=dx^2+dy^2+dz^2=dr^2+r^2d\phi^2+dz^2.}It is very
+important to recognize that this change of distance is for @emph{any}
+point in the 3D space, not just those changes that occur on the 2D
+spherical shell of @ref{sphericalplane}. Recall that our 2D friend can
+only do measurements in the 2D spherical shell, not the full 3D
+space. So we have to constrain this general change to any change on
+the 2D shperical shell. To do that, let's look at the arbitrary point
+@mymath{P} on the 2D spherical shell. Its image (@mymath{P'}) on the
+flat plain is also displayed. From the dark triangle, we see that
 
 @float Figure,sphericalplane
-@center@image{gnuastro-figures/sphericalplane, 8cm, , }
+@center@image{gnuastro-figures/sphericalplane, 10cm, , }
 
 @caption{2D spherical plane (centered on @mymath{O}) and flat plane
 (gray) tangent to it at point @mymath{A}.}
 @end float
 
-@ref{sphericalplane} assumes a spherical shell with radius @mymath{R}
-as the curved 2D plane for simplicity. The result will be generalizd
-afterwards. The first step in creating those tools is to imagine a
-third dimension along the @mymath{z} axis as shown in
-@ref{sphericalplane}. For simplicity, the curved 2D space is assumed
-to be a spherical shell and the the @mymath{z} axis is assumed to pass
-through its center. Our imaginary 2D friend cannot imagine the third
-dimension or a curved 2D surface within it, so the remainder of this
-discussion is purely abstract for it (similar to us being unable to
-visualize a 3D curved space in 4D). But since we are 3D creatures, we
-have the advantage of visualizing the following steps. Fortunately our
-2D friend knows the mathematics, so it can follow along with us.
-
-With the third axis added, a generic infinitesimal change over the
-full 3D space corresponds to the distance:
-@dispmath{ds_s^2=dx^2+dy^2+dz^2=dr^2+r^2d\phi^2+dz^2.}It is very
-important to recognize that this distance is for @emph{any} point in
-the 3D space, not just those points on the 2D spherical shell of
-@ref{sphericalplane}. Recall that our 2D friend can only do
-measurements in the 2D spherical shell, not the full 3D space. So we
-have to limit our distance measurements to points on the 2D shperical
-shell. To do that, let's look at the arbitrary point @mymath{P} on the
-2D spherical shell. Its image (@mymath{P'}) on the flat plain is also
-displayed. From the dark triangle, we see that
-@dispmath{\sin\theta={r\over R},\quad\cos\theta={R-z\over R}.}From
-these relations our 2D friend can find @mymath{z} as as function of r
-(recall that our 2D friend can only imagine two dimensions, so with
-this relation, @mymath{z} will be eliminated). From
+@dispmath{\sin\theta={r\over R},\quad\cos\theta={R-z\over R}.}These
+relations allow our 2D friend to find the value of @mymath{z} (an
+abstract dimension for it) as a function of r (distance on a flat 2D
+plane, which it can visualize) and thus eliminate @mymath{z}. From
 @mymath{\sin^2\theta+\cos^2\theta=1}, we get @mymath{z^2-2Rz+r^2=0}
 and solving for @mymath{z}, we find:
 @dispmath{z=R\left(1\pm\sqrt{1-{r^2\over R^2}}\right).}The
@@ -12299,10 +12299,9 @@ hemisphere and one in the lower hemisphere. An infinitesimal change in
 @mymath{r}, will create the following infinitesimal change in
 @mymath{z}:
 
-@dispmath{dz={\mp r\over R}\left(1\over \sqrt{1-{r^2/R^2}}\right)dr.}
-@noindent
-Using this (its positive sign) instead of @mymath{dz} in the
-@mymath{ds_s^2} equation above, we get:
+@dispmath{dz={\mp r\over R}\left(1\over
+\sqrt{1-{r^2/R^2}}\right)dr.}Using the positive signed equation
+instead of @mymath{dz} in the @mymath{ds_s^2} equation above, we get:
 
 @dispmath{ds_s^2={dr^2\over 1-r^2/R^2}+r^2d\phi^2.}
 
@@ -12317,67 +12316,112 @@ closed 2D spherical shell like @ref{sphericalplane}. When
 @mymath{K} will correspond to an imaginary @mymath{R}. The latter two
 cases are open universes (where @mymath{r} can extend to infinity).
 However, when @mymath{K>0}, we have a closed universe, where
-@mymath{r} cannot become larger than @mymath{R}.
-
-@cindex Comoving distance
-A very important issue that surfaces now (while we are still in 2D and
-can actually visualize things) is that @mymath{\overrightarrow{r}} is
-tangent to the curved space at the observer's position. In other
-words, it is on the gray flat surface of @ref{sphericalplane}, even
-when the universe if curved. Therefore for the point @mymath{P}, the
-raw coordinate @mymath{r} is the distance to @mymath{P'}, not
-@mymath{P}. The distance to the point @mymath{P} (at a specific
-coordinate @mymath{r}) on the curved surface (thick line) is called
-the comoving distance (reason discussed below) and is displayed with
-@mymath{\chi}. For the specific example of @ref{sphericalplane}, the
-comoving distance can be calculated with: @mymath{\chi=R\theta}
-(@mymath{\theta} is in radians). using the @mymath{\sin\theta}
-relation found above, we can find @mymath{\chi} as a function of
-@mymath{r}:
-
-@dispmath{\theta=\sin^{-1}\left({r\over R}\right)\quad\rightarrow\quad
-\chi(r)=R\sin^{-1}\left({r\over R}\right)}
-@noindent
-@mymath{R} is just an arbitrary constant and can be directly
-found from @mymath{K}, so for cleaner equations, it is common practice
-to set @mymath{R=1}, which gives:
-@mymath{\chi(r)=\sin^{-1}r}. Generally, depending on the the
-curvature, the comoving distance can be written as a function of the
-coordinate @mymath{r} as (from now on we are assuming @mymath{R=1}):
-@dispmath{\chi(r)=\sin^{-1}(r)\quad(K>0),\quad\quad\chi(r)=r\quad(K=0),\quad\quad\chi(r)=\sinh^{-1}(r)\quad(K<0).}The
-comoving distance allows us to write the the infinitesimal change of
-distance in a more simpler and abstract form of
-@dispmath{ds_s^2=d\chi^2+d\phi^2.}One easy way that @mymath{\chi} can
-be found is through the apparent brightness of an object: the distance
-light covers to reach us on the curved space is defined by
-@mymath{\chi}, not @mymath{r}. Therefore in a static universe, if the
-intrinsic luminosity of an object (@mymath{L}) is already known, its
-apparent brightness (@mymath{B}) can be used to find @mymath{\chi}
-from the equation @mymath{B=L/(4\pi\chi^2)}. One class of such objects
-with a-priori known intrinsic luminosities are supernovae.
+@mymath{r} cannot become larger than @mymath{R} as in
+@ref{sphericalplane}.
 
 @cindex Proper distance
-Until now, we assumed a static universe (not changing with time). But
-our observations so far appear to indicate that the universe is
-expanding (isn't static). Since we expect the universe to be expanding
-at all points in our 2D space at the same time, to add a time
-dependence to our distance measurements, we can simply add a scaling
-factor, @mymath{a(t)}, which is a function of time. Since time
-dependence involves speed, let's assume that we are only thinking
-about the change in distance caused by something moving at the speed
-of light (light) which is postulated as the only constant and
-frame-of-reference-independent speed in the universe:
+A very important issue that can be discussed now (while we are still
+in 2D and can actually visualize things) is that
+@mymath{\overrightarrow{r}} is tangent to the curved space at the
+observer's position. In other words, it is on the gray flat surface of
+@ref{sphericalplane}, even when the universe if curved:
+@mymath{\overrightarrow{r}=P'-A}. Therefore for the point @mymath{P}
+on a curved space, the raw coordinate @mymath{r} is the distance to
+@mymath{P'}, not @mymath{P}. The distance to the point @mymath{P} (at
+a specific coordinate @mymath{r} on the flat plane) on the curved
+surface (thick line in @ref{sphericalplane}) is called the
+@emph{proper distance} and is displayed with @mymath{l}. For the
+specific example of @ref{sphericalplane}, the proper distance can be
+calculated with: @mymath{l=R\theta} (@mymath{\theta} is in
+radians). using the @mymath{\sin\theta} relation found above, we can
+find @mymath{l} as a function of @mymath{r}:
+
+@dispmath{\theta=\sin^{-1}\left({r\over R}\right)\quad\rightarrow\quad
+l(r)=R\sin^{-1}\left({r\over R}\right)}@mymath{R} is just an arbitrary
+constant and can be directly found from @mymath{K}, so for cleaner
+equations, it is common practice to set @mymath{R=1}, which gives:
+@mymath{l(r)=\sin^{-1}r}. Also note that if @mymath{R=1}, then
+@mymath{l=\theta}. Generally, depending on the the curvature, in a
+@emph{static} universe the proper distance can be written as a
+function of the coordinate @mymath{r} as (from now on we are assuming
+@mymath{R=1}):
+
+@dispmath{l(r)=\sin^{-1}(r)\quad(K>0),\quad\quad
+l(r)=r\quad(K=0),\quad\quad l(r)=\sinh^{-1}(r)\quad(K<0).}With
+@mymath{l}, the infinitesimal change of distance can be written in a
+more simpler and abstract form of
+
+@dispmath{ds_s^2=dl^2+r^2d\phi^2.}
+
+@cindex Comoving distance
+Until now, we had assumed a static universe (not changing with
+time). But our observations so far appear to indicate that the
+universe is expanding (isn't static). Since there is no reason to
+expect the observed expansion is unique to our particular position of
+the universe, we expect the universe to be expanding at all points
+with the same rate at the same time. Therefore, to add a time
+dependence to our distance measurements, we can simply add a
+multiplicative scaling factor, which is a function of time:
+@mymath{a(t)}. The functional form of @mymath{a(t)} comes from the
+cosmology and the physics we assume for it: general relativity.
+
+With this scaling factor, the proper distance will also depend on
+time. As the universe expands (moves), the distance will also move to
+larger values. We thus define a distance measure, or coordinate, that
+is independent of time and thus doesn't `move' which we call the
+@emph{comoving distance} and display with @mymath{\chi} such that:
+@mymath{l(r,t)=\chi(r)a(t)}. We thus shift the @mymath{r} dependence
+of the proper distance we derived above for a static universe to the
+comoving distance:
+
+@dispmath{\chi(r)=\sin^{-1}(r)\quad(K>0),\quad\quad
+\chi(r)=r\quad(K=0),\quad\quad \chi(r)=\sinh^{-1}(r)\quad(K<0).}
+
+Therefore @mymath{\chi(r)} is the proper distance of an object at a
+specific reference time: @mymath{t=t_r} (the @mymath{r} subscript
+signifies ``reference'') when @mymath{a(t_r)=1}. At any arbitrary
+moment (@mymath{t\neq{t_r}}) before or after @mymath{t_r}, the proper
+distance to the object can simply be scaled with
+@mymath{a(t)}. Measuring the change of distance in a time-dependent
+(expanding) universe will also involve the speed of the object
+changing positions. Hence, let's assume that we are only thinking
+about the change in distance caused by something (light) moving at the
+speed of light. This speed is postulated as the only constant and
+frame-of-reference-independent speed in the universe, making our
+calculations easier, light is also the major source of information we
+recieve from the universe, so this is a reasonable assumption for most
+extra-galactic studies. We can thus parametrize the change in distance
+as
+
 @dispmath{ds^2=c^2dt^2+a^2(t)ds_s^2 =
-c^2dt^2+a^2(t)(d\chi^2+d\phi^2).}We can now see why @mymath{\chi} is
-called the comoving distance: it is the distance of the object at a
-reference time: @mymath{t=t_r} (the @mymath{r} subscript signifies
-``reference'') such that @mymath{a(t_r)=1}. At any arbitrary moment
-(@mymath{t\neq{t_r}}) before or after @mymath{t_r}, the distance to
-the object will be scaled as @mymath{a(t)}. This time-dependent
-distance (at a fixed moment in time) is known as the proper
-distance. In other words, the comoving distance doesn't change with
-time (co-moves with the universe), while the proper distance changes
-(expands or shrinks).
+c^2dt^2+a^2(t)(d\chi^2+r^2d\phi^2).}
+
+
+@node Extending distance concepts to 3D, Invoking astcosmiccal, Distance on a 2D curved space, CosmicCalculator
+@subsection Extending distance concepts to 3D
+
+The concepts of @ref{Distance on a 2D curved space} are here extended
+to a 3D space that @emph{might} be curved in a 4D space. We can start
+with the generic infinitesimal distance in a static 3D universe, but
+this time not in spherical coordinates instead of polar coordinates.
+@mymath{\theta} is shown in @ref{sphericalplane}, but here we are 3D
+beings, positioned on @mymath{O} (the center of the sphere) and the
+point @mymath{O} is tangent to a 4D-sphere. In our 3D space, a generic
+infinitesimal displacement will have the distance:
+@dispmath{ds_s^2=dx^2+dy^2+dz^2=dr^2+r^2(d\theta^2+sin^2{\theta}d\phi^2).}Like
+our 2D friend before, we now have to assume an abstract dimension
+which we cannot visualize. Let's call the fourth dimension @mymath{w},
+then the general change in coordinates in the @emph{full} four
+dimensional space will be:
+@dispmath{ds_s^2=dr^2+r^2(d\theta^2+sin^2{\theta}d\phi^2)+dw^2.}But we
+can only work on a 3D curved space, so following exactly the same
+steps and convensions as our 2D friend, we arrive at:
+@dispmath{ds_s^2={dr^2\over
+1-Kr^2}+r^2(d\theta^2+sin^2{\theta}d\phi^2).}In a non-static universe
+(with a scale factor a(t), the distance can be written as:
+@dispmath{ds^2=c^2dt^2+a^2(t)[d\chi^2+r^2(d\theta^2+sin^2{\theta}d\phi^2)].}
+
+
 
 @c@dispmath{H(z){\equiv}\left(\dot{a}\over a\right)(z)=H_0E(z) }
 
@@ -12401,7 +12445,7 @@ time (co-moves with the universe), while the proper distance changes
 
 
 
-@node Invoking astcosmiccal,  , Distance on a 2D curved space, CosmicCalculator
+@node Invoking astcosmiccal,  , Extending distance concepts to 3D, CosmicCalculator
 @subsection Invoking CosmicCalculator
 
 CosmicCalculator will calculate cosmological variables based on the
