--- a/doc/plotsrc/tex/sphericalplane.tex
+++ b/doc/plotsrc/tex/sphericalplane.tex
@@ -72,4 +72,7 @@
   \draw (0.5,0) -- node[anchor=south west]{$r$}(1.88, 0.3);
   \draw[dotted] (1.88,0.3) -- ++(-1.1,0);
   \draw[dotted] (1.88,0.3) -- ++(-0.3,-0.3);
+
+  % Label chi:
+  \draw (1.43, -0.9) node[anchor=south west]{$l$};
 \end{tikzpicture}
