MakeCatalog: Sky and its STD are now independent of threshold
The Sky and its Standard deviation are now calculated independent of
the threshold which is how it should be. Previously, I had mistakenly
only calculated the average Sky and its standard deviation for pixels
above the threshold. To do this, a new column in the object
information table was necessary: the OALLAREA column.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -10576,7 +10576,7 @@ The magnitude of all clumps or objects, see @option{--brightness}.
 @option{--clumpbrightness}.
 
 @item --riverave
-[Clumps] The average Sky subtracted flux of the river pixels of this
+[Clumps] The average brightness of the river pixels around this
 clump. River pixels were defined in Akhlaghi and Ichikawa 2015. In
 short they are the pixels immediately outside of the clumps. This
 value is used internally to find the brightness (or magnitude) and
